# txor

./: .gitignore  Cargo.toml  README.md  justfile
src/: main.rs
src/cli/: fixture_test.rs  mod.rs  setup_logs.rs  take_result_and_exit.rs  write_processing_output.rs
src/cli/fixture_test/: mod.rs  test.rs  test_case.rs
src/errors/: cli_error.rs  mod.rs  parser_error.rs  processor_error.rs
src/models/: client_account.rs  client_id.rs  dispute_state.rs  mod.rs  money_cents.rs  stored_transaction.rs  transaction.rs  transaction_id.rs
src/parser/: csv_transaction_source.rs  mod.rs  raw_transaction.rs  transaction_source.rs
src/processor/: in_memory_processor_ledger.rs  mod.rs  processing_output.rs  processor_ledger.rs  transaction_processor.rs
src/utils/: mod.rs  money_precision.rs  money_unit_subdivisions.rs
test_data/: 0_deposit.toml  0_deposit_input.csv  10_res_no_double.toml  11_res_re_dispute.toml  12_chb_simple.toml  13_chb_no_double.toml  14_chb_locked_acc.toml  15_dis_withdrawn.toml  16_chb_withdrawn.toml  17_dep_overflow_check.toml  18_mixed_complex.toml  1_withdrawal.toml  2_duplicate_txid.toml  3_client_persistance.toml  4_withdrawal_insufficient.toml  5_no_tx.toml  6_precision.toml  7_dis_no_access.toml  8_dis_started.toml  9_res_simple.toml
